[package]
name = "aoc-build"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
prettyplease = "0.2.15"
regex = "1.10.2"
syn = "2.0.39"

[lints.clippy]
pedantic = "deny"
case_sensitive_file_extension_comparisons = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
