[package]
name = "aoc-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[lib]
name = "aoc_derive"
proc_macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "parsing"] }

[dev-dependencies]
trybuild = "1.0.88"
