[package]
name = "aoc-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[lib]
name = "aoc_derive"
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full", "parsing"] }

[dev-dependencies]
trybuild = "1.0.100"
