[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[dependencies]
aoc-derive = { path = "../aoc-derive" }
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.13.0"
lazy_static = "1.5.0"
mktemp = "0.5.1"
thiserror = "2.0.0"

[dev-dependencies]
insta = "1.40.0"
serial_test = { version = "3.1.1", default-features = false }
