[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[dependencies]
aoc-derive = { path = "../aoc-derive" }
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
itertools = "0.14.0"
lazy_static = "1.5.0"
mktemp = "0.5.1"
thiserror = "2.0.11"

[dev-dependencies]
insta = "1.42.0"
serial_test = { version = "3.2.0", default-features = false }
